After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 774062 - [flac] fix extractor
[flac] fix extractor
Status: RESOLVED FIXED
Product: tracker
Classification: Core
Component: Extractor
unspecified
Other All
: Normal normal
: ---
Assigned To: tracker-extractor
tracker-extractor
Depends on:
Blocks:
 
 
Reported: 2016-11-07 15:09 UTC by Marinus Schraal
Modified: 2016-11-07 23:10 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
tracker-extract: Albumartist may be NULL in flac (1.02 KB, patch)
2016-11-07 15:09 UTC, Marinus Schraal
committed Details | Review
tracker-extract: Pass the flac metadata (1.09 KB, patch)
2016-11-07 15:09 UTC, Marinus Schraal
committed Details | Review

Description Marinus Schraal 2016-11-07 15:09:18 UTC
The flac extractor wasn't working for me with:

g_object_unref: assertion 'G_IS_OBJECT (object)' failed
Trace/breakpoint trap (core dumped)

Turns out it was trying to unref the album_artist TrackerResource which 
can be NULL when the flac has no albumartist tag.

After fixing that it turned out that it was still failing with:
No metadata or extractor modules found to handle this file

Turns out the TrackerInfo was NULL, because we didn't set it in the 
extractor info. Seems this was an oversight in the move the 
TrackerResource.
Comment 1 Marinus Schraal 2016-11-07 15:09:22 UTC
Created attachment 339256 [details] [review]
tracker-extract: Albumartist may be NULL in flac

album_artist is a TrackerResource, but may be NULL: do not just unref
it.
Comment 2 Marinus Schraal 2016-11-07 15:09:27 UTC
Created attachment 339257 [details] [review]
tracker-extract: Pass the flac metadata

Oversight from the move to TrackerResource, the flac extractor was not
passing the metadata on for further processing.
Comment 3 Marinus Schraal 2016-11-07 23:10:33 UTC
Attachment 339256 [details] pushed as 375b5a9 - tracker-extract: Albumartist may be NULL in flac
Attachment 339257 [details] pushed as f90b07a - tracker-extract: Pass the flac metadata