tracker-extract: Albumartist may be NULL in flac

album_artist is a TrackerResource, but may be NULL: do not just unref
it.

https://bugzilla.gnome.org/show_bug.cgi?id=774062